屏蔽服务器地址

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,8 +8,8 @@ copyrequestbody = true
 EnableDocs = true
 
 mysqluser = root
-mysqlpass = cdhpy.cn
-mysqlhost = 203.195.178.77
+mysqlpass = 123456
+mysqlhost = localhost
 mysqlport = 3306
 mysqldb = wexin
 mysqlpre = ""
