--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ static
 wx_server_go_windows_amd64.exe
 commentsRouter_controllers_web_v1_cus.go
 routers/commentsRouter_controllers_web_v1_wx.go
+routers/commentsRouter_controllers_web_v1_user.go
