--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,14 +10,14 @@ EnableDocs = true
 mysqluser = root
 mysqlpass = 123456
 mysqlhost = localhost
-mysqlport = 3306
-mysqldb = wexin
+mysqlport = 3307
+mysqldb = citydb
 mysqlpre = ""
 
 pagelimit = 10
 
 cache = redis
-redis_host = 127.0.0.1:6379
+redis_host = 139.224.62.170:6379
 memcache_host = 127.0.0.1:7000
 
 accessdomain= *
