设备查询接口

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,8 +8,8 @@ copyrequestbody = true
 EnableDocs = true
 
 mysqluser = root
-mysqlpass = 123456
-mysqlhost = localhost
+mysqlpass = abc@123
+mysqlhost = 175.155.13.8
 mysqlport = 3307
 mysqldb = citydb
 mysqlpre = ""
