充值订单查询接口

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ commentsRouter_controllers_web_v1_cus.go
 routers/commentsRouter_controllers_web_v1_wx.go
 routers/commentsRouter_controllers_web_v1_user.go
 routers/commentsRouter_controllers_web_v1_park.go
+routers/commentsRouter_controllers_web_v1_charge.go
