--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,10 +8,10 @@ copyrequestbody = true
 EnableDocs = true
 
 mysqluser = root
-mysqlpass = abc@123
-mysqlhost = 175.155.13.8
-mysqlport = 3307
-mysqldb = citydb
+mysqlpass = 123456
+mysqlhost = localhost
+mysqlport = 3306
+mysqldb = wexin
 mysqlpre = ""
 
 pagelimit = 10
