--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ routers/commentsRouter_controllers_web_v1_wx.go
 routers/commentsRouter_controllers_web_v1_user.go
 routers/commentsRouter_controllers_web_v1_park.go
 routers/commentsRouter_controllers_web_v1_charge.go
+routers/commentsRouter_controllers_common.go
