菜单维护接口

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,6 +7,8 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 
+serveraddr = http://203.195.178.77/
+
 mysqluser = root
 mysqlpass = 123456
 mysqlhost = localhost
