--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ routers/commentsRouter_controllers_web_v1_charge.go
 routers/commentsRouter_controllers_common.go
 routers/commentsRouter_controllers_web_v1_sys.go
 routers/commentsRouter_controllers_web_v1_server.go
+routers/commentsRouter_controllers_web_v1_users.go
