--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ routers/commentsRouter_controllers_web_v1_users.go
 routers/commentsRouter____wx_server_go_controllers_common.go
 .idea/
 routers/commentsRouter_.go
+publish/publish0215.zip
