会员卡申请接口

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ routers/commentsRouter____wx_server_go_controllers_common.go
 .idea/
 routers/commentsRouter_.go
 publish/publish0215.zip
+publish/
