--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ routers/commentsRouter____wx_server_go_controllers_common.go
 routers/commentsRouter_.go
 publish/publish0215.zip
 publish/
+conf_env/
